# dashboard-financeiro-streamlit

./: Financas.xlsx  Modelo_Planilha_Financeira.xlsx  README.md  dados.ipynb  main.py  metas.json  pyproject.toml  requirements.txt  tirarplanilha.gitignore
finance/: pyproject.toml
