[tool.poetry]
name = "financas-dashboard"
version = "0.1.0"
description = "Dashboard financeiro em tempo real com Streamlit"
authors = ["Caetano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.45.0"
openpyxl = "^3.1.5"
matplotlib = "^3.10.3"
ipykernel = "^6.29.5"
notebook = "^7.4.2"
jupyterlab = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
